# xpm

./: Cargo.toml  README.md  ROADMAP.md
.github/scripts/: sync_roadmap.py
.github/workflows/: roadmap-sync.yml
crates/xpm-core/: Cargo.toml
crates/xpm-core/src/: config.rs  lib.rs  repo.rs
crates/xpm-core/src/resolver/: dependency.rs  mod.rs  provider.rs  tests.rs  types.rs  version.rs
crates/xpm/src/: cli.rs  main.rs
docs/: RESOLVER.md
