[package]
name = "xpm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for the xpm package manager"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
resolvo = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tempfile = "3"
